removed priceLimit
